--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
     <properties>
         <java-version>1.8</java-version>
-        <com.google.guava-version>18.0</com.google.guava-version>
+        <com.google.guava-version>32.0.0-android</com.google.guava-version>
         <jbehave.core-version>3.9.5</jbehave.core-version>
         <jbehave.site-version>3.1.1</jbehave.site-version>
     </properties>
